# vmaf-sys

./: Cargo.toml  README.md  build.rs
include/: libvmaf.h
src/: extras.rs  lib.rs
