[package]
name = "vmaf-sys"
version = "0.0.3"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
description = "Rust VMAF FFI"
repository = "https://github.com/colbyn/vmaf-sys"
license = "MIT"

[dependencies]

[build-dependencies]
reqwest = "0.9.22"
tar = "0.4.26"
flate2 = "1.0.12"
bindgen = "0.50"

# [features]
# docs-only = []

# [package.metadata.docs.rs]
# features = ["docs-only"]

[package.metadata.docs.rs]
rustc-args = ["--cfg",  "vmaf_sys_docs_rs"]
rustdoc-args = ["--cfg", "vmaf_sys_docs_rs"]